2010-02-12  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Make it possible to toggle the use of QGraphicsView in QtLauncher at run-time
        https://bugs.webkit.org/show_bug.cgi?id=34844

        * QtLauncher/main.cpp:
        (LauncherWindow::LauncherWindow):
        (LauncherWindow::initializeView):
        (LauncherWindow::setupUI):
        * QtLauncher/webview.cpp:
        (WebViewGraphicsBased::WebViewGraphicsBased):

2010-02-11  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Alexey Proskuryakov.

        WebSocket ignores HttpOnly cookies, but should use in Handshake.
        https://bugs.webkit.org/show_bug.cgi?id=34289

        Update pywebsocket to 0.4.8, which supports cgi directories.
        run-webkit-tests and run-webkit-websocketserver will run
        pywebsocket, specifying /websocket/test/cookies as cgi directory.

        * Scripts/run-webkit-tests:
        * Scripts/run-webkit-websocketserver:
        * pywebsocket/mod_pywebsocket/standalone.py:
        * pywebsocket/setup.py:

2010-02-11  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>

        Reviewed by Dan Bernstein.

        [Mac] Duplicated setXSSAuditorEnabled preference at Mac DRT
        https://bugs.webkit.org/show_bug.cgi?id=34798

        Remove duplicated setXSSAuditorEnabled preference at Mac DRT

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetDefaultsToConsistentValues):

2010-02-11  Eric Seidel  <eric@webkit.org>

        No review, build fix only.

        webkitdirs.pm has a crazy amount of duplicated feature detection code
        https://bugs.webkit.org/show_bug.cgi?id=34869

        * Scripts/build-webkit: Fix typo which broke bots.

2010-02-11  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        webkitdirs.pm has a crazy amount of duplicated feature detection code
        https://bugs.webkit.org/show_bug.cgi?id=34869
